[package]
name = "ysc-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ysc_utils"
path = "src/lib.rs"

[[bin]]
name = "global_updater"
path = "src/bin/global_updater.rs"

[[bin]]
name = "script_info"
path = "src/bin/script_info.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "basic_disassemble"
path = "src/bin/basic_disassemble.rs"

[[bin]]
name = "strings"
path = "src/bin/strings.rs"

[[bin]]
name = "native_table"
path = "src/bin/native_table.rs"

[[bin]]
name = "ast_gen"
path = "src/bin/ast_gen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#panic = "abort"
#strip = "symbols"
debug = true

[dependencies]
bitbuffer = "0.10.9"
byteorder = "1.4.3"
anyhow = "1.0.71"
num_enum = "0.6.1"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
regex = "1.8.4"
eframe = "0.22.0"
tinyfiledialogs = "3.9.1"
serde = "1.0.164"
serde_json = "1.0.97"
serde_derive = "1.0.164"
